# WebKeyboard-for-StarCitizen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  release.md  sdkconfig  sdkconfig.defaults  todo
cert/: readme.md
components/dns_server/: CMakeLists.txt
components/dns_server/include/: dns_server.h
main/: CMakeLists.txt  cache.h  clients.h  config.h  ctrlmap.h  define.h  filter.h  generated.h  hwrandom.h  idf_component.yml  ledStatusChange.h  main.cpp  make.h  make.h.template  notification.h  packers.h  resourceChecksum.h  result.h  resultStream.cpp  resultStream.h  scheduler.h  session.h  sessionManager.cpp  sessionManager.h  storage.h  util.h  wsproto.h
main/compression/: decompressor.h  gzEngine.cpp  gzEngine.h
main/crypto/: base64Helper.h
main/crypto/hash/: httpIdentity.h  sha256Engine.cpp  sha256Engine.h
main/dns/: server.h  service.h
main/exception/: bad_api_call.h  not_found.h  not_implemented.h  parsing_error.h  unsupported.h
main/hid/: deviceDescriptor.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  keyboardTask.h  sequenceWriter.h  shortcutWriter.h  task.h  usbDevice.cpp  usbDevice.h  usbDeviceImpl.h  usbModuleAdapter.cpp  usbModuleAdapter.h  writer.h
main/http/: action.cpp  action.h  codes.h  contentType.h  cookie.cpp  cookie.h  cookies.cpp  cookies.h  errors.h  features.h  handler.h  headers.cpp  headers.h  network.cpp  network.h  request.cpp  request.h  response.cpp  response.h  route.cpp  route.h  secure.cpp  secure.h  server.cpp  server.h  session.h  uri.cpp  uri.h
main/http/exception/: headers_sended.h  invalid_descriptor.h
main/http/lib/httpparser/: urlparser.h
main/http/resource/: file.cpp  file.h  map.h  memoryDirectory.cpp  memoryDirectory.h  resource.h  shortcut.h
main/http/resource/cache/: cacheControl.h  dymmy.h  eTag.h  iControl.h  noCache.h
main/http/resource/memory/: file.cpp  file.h  shortcut.h
main/http/session/: baseManager.h  baseSession.h  manager.h  memoryManager.cpp  memoryManager.h  pointer.h  session.cpp  session.h  traits.h  web.cpp  web.h  websocket.h
main/http/session/interfaces/: iBaseSession.h  iCast.h  iManager.h  iSession.h  iSocksCntSession.h  iTest.h  iWebSocketSession.h
main/http/socket/: asyncSocket.cpp  asyncSocket.h  context.h  handler.cpp  handler.h  socket.cpp  socket.h
main/parsers/: keyboard.cpp  keyboard.h
main/syncing/: critical.h  dummy.h
main/wifi/: TODO  nvsRes.h  nvsResNoExept.h  wifi.cpp  wifi.h
resource/: CMakeLists.txt  captive.html  index.css  index.html  index.js  lib.js  overlay.js  widget.js
